--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
 }
@@ -10,8 +14,10 @@ body {
 }
 
 footer {
-    height: 500px;
-    background-color: white;
+    background-color: #1F1F1F;
+    color: white;
+    text-align: center;
+    padding: 80px;
 }
 
 nav {
@@ -127,9 +133,16 @@ p {
 
 .project-card {
     width: 300px;
-    height: 400px;
+    height: 500px;
     box-shadow: 5px 5px 20px rgb(194, 190, 190);
+    margin: 10px;
+}
 
+@media only screen and (max-width: 1000px) {
+    .project-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
 
 .project-container {
@@ -138,6 +151,41 @@ p {
 }
 
 .project-image {
-    width: 300px;
-    height: 400px;
+    margin-top: 25px;
+    width: 250px;
+    height: 250px;
+    border-radius: 125px;
+}
+
+.project-link {
+    text-decoration: none;
+    color: #ef744b;
+}
+
+hr {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.hamburger {
+    display: none;
+}
+
+@media only screen and (max-width: 1000px) {
+    .hamburger {
+        display: block;
+        border: 0;
+        background-color: transparent;
+        color: white;
+        font-size: 30px;
+    }
+
+    ul {
+        display: none;
+    }
 }
