--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,9 @@ body {
 }
 
 .hero {
-    background-color: #1c1d25;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)) no-repeat fixed,
+        url(images/backgroundimg.jpg) no-repeat center center fixed;
+    background-size: cover;
     height: 100vh;
     color: white;
     font-size: 40px;
@@ -86,6 +88,7 @@ p {
     font-weight: 300;
     padding-top: 5px;
     margin-top: 20px;
+    border: white solid 3px;
 }
 
 .button:hover {
@@ -138,9 +141,11 @@ p {
 
 .project-card {
     width: 300px;
-    height: 500px;
+    height: 450px;
     box-shadow: 5px 5px 20px rgb(194, 190, 190);
     margin: 20px;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 @media only screen and (max-width: 1000px) {
