--- a/src/styles.css
+++ b/src/styles.css
@@ -143,7 +143,6 @@ p {
     height: 450px;
     box-shadow: 5px 5px 20px rgb(194, 190, 190);
     margin: 20px;
-    padding: 10px;
     border-radius: 10px;
 }
 
@@ -160,10 +159,12 @@ p {
 }
 
 .project-image {
-    margin-top: 25px;
-    width: 250px;
+    width: 300px;
     height: 250px;
-    border-radius: 125px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    object-fit: cover;
+    object-position: center;
 }
 
 .project-link {
