--- a/src/styles.css
+++ b/src/styles.css
@@ -146,10 +146,14 @@ p {
     border-radius: 10px;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1920px) {
     .project-container {
         display: flex;
         flex-wrap: wrap;
+    }
+
+    .project-card {
+        flex-grow: 1 0 20%;
     }
 }
 
